<resources>
    <string name="app_name">Greeting</string>
    <string name="full_name">Full Name</string>
    <string name="register">Register</string>
    <string name="gmail">user@gmail.com</string>
    <string name="password">***********</string>

    <string name="create_your_new_account">Create your new account</string>
    <string name="login">Login</string>
    <string name="remember_me">Remember Me</string>
    <string name="forgot_password">Forgot Password</string>
</resources>